test/should-fail/vsgc1767.f3
/*
 * @test/compile-error
 */
var a: Number = null as Number;
var b = null as Number;
